更新train中的cb_loss和数据集划分代码

--- a/Generate_dataset/Jupyter_Code/Code/test_v2.ipynb
+++ b/Generate_dataset/Jupyter_Code/Code/test_v2.ipynb
@@ -256,15 +256,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__CB_Loss代码修改__"
+    "__IOU指标实现__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2]\n",
+      " [0 2 1]]\n",
+      "[[2 1 0]\n",
+      " [1 0 1]]\n",
+      "cm [[0 1 1]\n",
+      " [0 2 0]\n",
+      " [2 0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn import metrics\n",
+    "\n",
+    "y_true = np.array([[0, 1, 2],[0, 2, 1]])\n",
+    "print(y_true)\n",
+    "y_pred = np.array([[2, 1, 0],[1, 0, 1]])\n",
+    "print(y_pred)\n",
+    "\n",
+    "\n",
+    "def cal_cm(y_true, y_pred):\n",
+    "    y_true = y_true.reshape(1, -1).squeeze()\n",
+    "    y_pred = y_pred.reshape(1, -1).squeeze()\n",
+    "\n",
+    "    cm = metrics.confusion_matrix(y_true, y_pred)\n",
+    "    return cm\n",
+    "\n",
+    "cm = cal_cm(y_true, y_pred)\n",
+    "print('cm',cm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "temp tensor([[0, 0, 0],\n",
+      "        [0, 1, 1],\n",
+      "        [0, 2, 0]])\n",
+      "weight [0.5025125628140701, 0.2537814064007222, 0.2040401995838798, 0]\n",
+      "weight_dice [1, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import math\n",
+    "import torch\n",
+    "temp = torch.randint(0, 3, (3, 3))\n",
+    "print('temp',temp) \n",
+    "confusion = [2, 4, 5, 1] \n",
+    "\n",
+    "def cb_loss(temp, beta, confusion):\n",
+    "\n",
+    "    confusion_ = [torch.sum(temp == i) for i in range(4)]\n",
+    "\n",
+    "    weight = []\n",
+    "    weight_dice = []\n",
+    "    for i, n in zip(confusion_, confusion):\n",
+    "        if i == 0:\n",
+    "            weight.append(0)\n",
+    "            weight_dice.append(1)\n",
+    "        else:\n",
+    "            weight_dice.append(1)\n",
+    "            weight.append(((1.0 - beta) / (1.0 - math.pow(beta, n))))\n",
+    "    return weight, weight_dice\n",
+    "\n",
+    "\n",
+    "weight, weight_dice = cb_loss(temp, 0.99, confusion)\n",
+    "print('weight',weight)\n",
+    "print('weight_dice',weight_dice)"
+   ]
   }
  ],
  "metadata": {
