--- a/Generate_dataset/Jupyter_Code/Code/Cross_Entropy.ipynb
+++ b/Generate_dataset/Jupyter_Code/Code/Cross_Entropy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,11 +18,13 @@
      "output_type": "stream",
      "text": [
       "output:\n",
-      " tensor([[ 0.6522,  0.8080,  0.2059,  0.3446, -0.2827],\n",
-      "        [-1.1521, -0.6535, -0.3348, -1.6790,  1.5831],\n",
-      "        [ 1.2938, -1.3619,  0.3224,  0.2244, -0.2479],\n",
-      "        [-0.3655,  0.6795,  1.2152,  1.8519, -0.2604],\n",
-      "        [ 0.9388, -0.2316, -0.8106, -1.9803, -1.1706]])\n",
+      " tensor([[-0.0106, -0.4310, -1.6414,  1.2071,  0.3368],\n",
+      "        [-0.2920,  1.3862, -1.0200, -0.1568, -1.7095],\n",
+      "        [-0.0953,  0.6084, -0.6550,  0.4059,  0.7989],\n",
+      "        [-1.2834,  0.6305,  0.5013,  1.0222, -0.6259],\n",
+      "        [ 2.5351,  1.5265,  0.5361, -1.2505,  1.2854]])\n",
+      "target:\n",
+      " tensor([0, 2, 1, 3, 4])\n",
       "one_hot:\n",
       " tensor([[1., 0., 0., 0., 0.],\n",
       "        [0., 0., 1., 0., 0.],\n",
@@ -30,27 +32,27 @@
       "        [0., 0., 0., 1., 0.],\n",
       "        [0., 0., 0., 0., 1.]])\n",
       "softmax:\n",
-      " tensor([[0.2541, 0.2969, 0.1626, 0.1868, 0.0997],\n",
-      "        [0.0478, 0.0787, 0.1083, 0.0282, 0.7370],\n",
-      "        [0.4985, 0.0350, 0.1887, 0.1711, 0.1067],\n",
-      "        [0.0526, 0.1497, 0.2558, 0.4834, 0.0585],\n",
-      "        [0.6026, 0.1870, 0.1048, 0.0325, 0.0731]])\n",
+      " tensor([[0.1504, 0.0988, 0.0295, 0.5084, 0.2129],\n",
+      "        [0.1216, 0.6511, 0.0587, 0.1392, 0.0295],\n",
+      "        [0.1301, 0.2629, 0.0743, 0.2147, 0.3180],\n",
+      "        [0.0389, 0.2638, 0.2318, 0.3903, 0.0751],\n",
+      "        [0.5526, 0.2016, 0.0749, 0.0125, 0.1584]])\n",
       "logsoftmax:\n",
-      " tensor([[-1.3702, -1.2145, -1.8166, -1.6779, -2.3052],\n",
-      "        [-3.0404, -2.5418, -2.2232, -3.5673, -0.3052],\n",
-      "        [-0.6962, -3.3519, -1.6675, -1.7656, -2.2379],\n",
-      "        [-2.9442, -1.8992, -1.3635, -0.7268, -2.8392],\n",
-      "        [-0.5065, -1.6769, -2.2558, -3.4255, -2.6158]])\n",
+      " tensor([[-1.8943, -2.3146, -3.5250, -0.6765, -1.5468],\n",
+      "        [-2.1073, -0.4291, -2.8353, -1.9721, -3.5248],\n",
+      "        [-2.0397, -1.3360, -2.5994, -1.5386, -1.1456],\n",
+      "        [-3.2464, -1.3325, -1.4617, -0.9408, -2.5889],\n",
+      "        [-0.5930, -1.6017, -2.5920, -4.3786, -1.8428]])\n",
       "one_hot*logsoftmax:\n",
-      " tensor([[-1.3702, -0.0000, -0.0000, -0.0000, -0.0000],\n",
-      "        [-0.0000, -0.0000, -2.2232, -0.0000, -0.0000],\n",
-      "        [-0.0000, -3.3519, -0.0000, -0.0000, -0.0000],\n",
-      "        [-0.0000, -0.0000, -0.0000, -0.7268, -0.0000],\n",
-      "        [-0.0000, -0.0000, -0.0000, -0.0000, -2.6158]])\n",
+      " tensor([[-1.8943, -0.0000, -0.0000, -0.0000, -0.0000],\n",
+      "        [-0.0000, -0.0000, -2.8353, -0.0000, -0.0000],\n",
+      "        [-0.0000, -1.3360, -0.0000, -0.0000, -0.0000],\n",
+      "        [-0.0000, -0.0000, -0.0000, -0.9408, -0.0000],\n",
+      "        [-0.0000, -0.0000, -0.0000, -0.0000, -1.8428]])\n",
       "nllloss:\n",
-      " tensor(2.0576)\n",
+      " tensor(1.7698)\n",
       "loss:\n",
-      " tensor(2.0576)\n"
+      " tensor(1.7698)\n"
      ]
     }
    ],
@@ -64,6 +66,7 @@
     "\n",
     "#生成5个样本的标签，并转换为One-Hot编码\n",
     "target = torch.tensor([0, 2, 1, 3, 4])\n",
+    "print('target:\\n',target)\n",
     "one_hot = F.one_hot(target).float()\n",
     "print('one_hot:\\n',one_hot)\n",
     "\n",
@@ -84,6 +87,54 @@
     "loss = torch.nn.CrossEntropyLoss()\n",
     "value = loss(output, target)\n",
     "print('loss:\\n',value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1, 2, 2, 0],\n",
+      "        [1, 1, 4, 1],\n",
+      "        [0, 3, 4, 2],\n",
+      "        [1, 4, 0, 4]])\n",
+      "torch.Size([4, 4])\n",
+      "torch.Size([4, 4, 5])\n",
+      "tensor([[[0., 1., 0., 0., 0.],\n",
+      "         [0., 0., 1., 0., 0.],\n",
+      "         [0., 0., 1., 0., 0.],\n",
+      "         [1., 0., 0., 0., 0.]],\n",
+      "\n",
+      "        [[0., 1., 0., 0., 0.],\n",
+      "         [0., 1., 0., 0., 0.],\n",
+      "         [0., 0., 0., 0., 1.],\n",
+      "         [0., 1., 0., 0., 0.]],\n",
+      "\n",
+      "        [[1., 0., 0., 0., 0.],\n",
+      "         [0., 0., 0., 1., 0.],\n",
+      "         [0., 0., 0., 0., 1.],\n",
+      "         [0., 0., 1., 0., 0.]],\n",
+      "\n",
+      "        [[0., 1., 0., 0., 0.],\n",
+      "         [0., 0., 0., 0., 1.],\n",
+      "         [1., 0., 0., 0., 0.],\n",
+      "         [0., 0., 0., 0., 1.]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "target = torch.randint(0, 5, (4, 4))\n",
+    "print(target)\n",
+    "print(target.shape)\n",
+    "one_hot = F.one_hot(target).float()\n",
+    "print(one_hot.shape)\n",
+    "print(one_hot)"
    ]
   },
   {
@@ -146,17 +197,269 @@
     "import math\n",
     "import numpy as np\n",
     "\n",
-    "def cb_loss(y_pred, y_true, beta, confusion):\n",
-    "    weight = [((1.0 - beta) / (1.0 - math.pow(beta, i))) for i in confusion]\n",
-    "    criterion_train = torch.nn.CrossEntropyLoss(weight=torch.FloatTensor(weight))\n",
-    "    loss = criterion_train(y_pred.float(), y_true.long())\n",
+    "def cb_loss(y_pred, y_true, temp, beta, confusion):\n",
+    "    \n",
+    "    \n",
+    "    #统计标签MASK中每个类的样本数量，temp=y_true\n",
+    "    confusion_ = [torch.sum(temp == i) for i in range(2)]\n",
+    "\n",
+    "    weight = []\n",
+    "    weight_dice = []\n",
+    "    for i, n in zip(confusion_, confusion):\n",
+    "        if i == 0:\n",
+    "            weight.append(0)\n",
+    "            weight_dice.append(1)\n",
+    "        else:\n",
+    "            weight_dice.append(1)\n",
+    "            weight.append(((1.0 - beta) / (1.0 - math.pow(beta, n))))\n",
+    "    \n",
+    "    weight = torch.FloatTensor(weight)\n",
+    "    weight_dice = torch.FloatTensor(weight_dice)\n",
+    "    weight = weight.to(y_pred.device)\n",
+    "    weight_dice = weight_dice.to(y_pred.device)\n",
+    "\n",
+    "\n",
+    "    criterion_train = torch.nn.CrossEntropyLoss(weight=weight)\n",
+    "\n",
+    "    loss = criterion_train(y_pred.float(), temp.float())\n",
+    "\n",
     "    return loss\n",
     "\n",
-    "def train_for_cb_loss(model, optimizer)\n",
-    "    cls = []\n",
-    "    model.train()\n",
-    "    metric_logger = utils.MetricLogger(delimiter=\"  \") #delimiter-定界符\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[2, 3, 3, 1, 2],\n",
+      "        [0, 2, 1, 3, 3],\n",
+      "        [1, 2, 1, 1, 2],\n",
+      "        [2, 0, 3, 0, 0],\n",
+      "        [1, 0, 3, 1, 4]])\n",
+      "[tensor(5), tensor(7), tensor(6), tensor(6), tensor(1)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "target = torch.randint(0, 5, (5, 5))\n",
+    "print(target)\n",
+    "confusion_ = [torch.sum(target == i) for i in range(5)]\n",
+    "print(confusion_)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__数据集加载最新版本（negative:positive=7:3）（代码保留）__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "读入negative_sample...\n",
+      "***********************************************\n",
+      "negative_train_size: 6733\n",
+      "negative_validate_size: 2886\n",
+      "读入数据个数为： 6733\n",
+      "***********************************************\n",
+      "读入完毕！\n",
+      "\n",
+      "\n",
+      "读入positive_sample...\n",
+      "***********************************************\n",
+      "positive_train_size: 222\n",
+      "positive_validate_size: 95\n",
+      "读入数据个数为： 222\n",
+      "***********************************************\n",
+      "读入完毕！\n",
+      "\n",
+      "\n",
+      "开始加载正式数据集...\n",
+      "***********************************************\n",
+      "测试集一共划分为： 140 个批次\n",
+      "验证集一共划分为： 60 个批次\n",
+      "***********************************************\n",
+      "正式数据集加载完毕！\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import glob\n",
+    "import torch\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "import numpy as np\n",
+    "\n",
+    "class Generate_Dataset1(Dataset):\n",
+    "    def __init__(self, path):\n",
+    "        self.path = path\n",
+    "        self.data_path = glob.glob\\\n",
+    "            (os.path.join(path,'negative_input/*.npy'))  #读取data文件夹下所有.npy格式文件\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        data_path = self.data_path[index]\n",
+    "        # print(data_path)\n",
+    "        data = np.load(data_path)      #读取输入数据\n",
+    "        tensor_data = torch.from_numpy(data)\n",
+    "        \n",
+    "        label_path = data_path.replace('input/negative_input', 'label/negative_label')\n",
+    "        label = np.load(label_path)    #读取标签数据\n",
+    "        tensor_label = torch.from_numpy(label)\n",
+    "\n",
+    "        return tensor_data, tensor_label\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.data_path)\n",
+    "\n",
+    "class Generate_Dataset2(Dataset):\n",
+    "    def __init__(self, path):\n",
+    "        self.path = path\n",
+    "        self.data_path = glob.glob\\\n",
+    "            (os.path.join(path,'positive_input/*.npy'))  #读取data文件夹下所有.npy格式文件\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        data_path = self.data_path[index]\n",
+    "        # print(data_path)\n",
+    "        data = np.load(data_path)      #读取输入数据\n",
+    "        tensor_data = torch.from_numpy(data)\n",
+    "        \n",
+    "        label_path = data_path.replace('input/positive_input', 'label/positive_label')\n",
+    "        label = np.load(label_path)    #读取标签数据\n",
+    "        tensor_label = torch.from_numpy(label)\n",
+    "\n",
+    "        return tensor_data, tensor_label\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.data_path)\n",
+    "\n",
+    "#测试载入数据程序\n",
+    "if __name__ == '__main__':\n",
+    "\n",
+    "\n",
+    " \n",
+    "    #读取并载入negative_dataset\n",
+    "    print('读入negative_sample...')\n",
+    "    print('***********************************************')\n",
+    "    dataset1 = Generate_Dataset1('../Data/dataset(positive_negative)/input/')\n",
+    "    negative_train_size = int(len(dataset1) * 0.7)\n",
+    "    print('negative_train_size:', negative_train_size)\n",
+    "    negative_validate_size = int(len(dataset1) - negative_train_size)\n",
+    "    print('negative_validate_size:', negative_validate_size)\n",
+    "\n",
+    "    negative_train_dataset, negative_validate_dataset = torch.utils.data\\\n",
+    "                .random_split(dataset1, [negative_train_size, negative_validate_size])\n",
+    "\n",
+    "    print(\"读入数据个数为：\", len(negative_train_dataset))\n",
+    "    print('***********************************************')\n",
+    "    print('读入完毕！')\n",
+    "    print('\\n')\n",
+    "    train_loader = DataLoader(negative_train_dataset, batch_size=1, shuffle=True)\n",
+    "    validate_loader = DataLoader(negative_validate_dataset, batch_size=1, shuffle=True)\n",
+    "    \n",
+    "    # t = 0\n",
+    "    # for negative_train, negative_label in train_loader:\n",
+    "    #     t += 1\n",
+    "    #     print(negative_train.shape)\n",
+    "    #     print(negative_label.shape)\n",
+    "    # print('共有',t,'个训练集')\n",
+    "    \n",
+    "    # n = 0\n",
+    "    # for negative_validate, negative_label in validate_loader:\n",
+    "    #     n += 1\n",
+    "    #     print(negative_validate.shape)\n",
+    "    #     print(negative_label.shape)\n",
+    "    # print('共有',n,'个训练集')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    #读取并载入positive_dataset\n",
+    "    print('读入positive_sample...')\n",
+    "    print('***********************************************')\n",
+    "    \n",
+    "    dataset2 = Generate_Dataset2('../Data/dataset(positive_negative)/input/')\n",
+    "    positive_train_size = int(len(dataset2) * 0.7) + 1\n",
+    "    print('positive_train_size:',positive_train_size)\n",
+    "    positive_validate_size = int(len(dataset2) - positive_train_size)\n",
+    "    print('positive_validate_size:', positive_validate_size)\n",
+    "    positive_train_dataset, positive_validate_dataset = torch.utils.data\\\n",
+    "                .random_split(dataset2, [positive_train_size, positive_validate_size])\n",
+    "\n",
+    "    print(\"读入数据个数为：\", len(positive_train_dataset))\n",
+    "    print('***********************************************')\n",
+    "    print('读入完毕！')\n",
+    "    train_loader = DataLoader(positive_train_dataset, batch_size=1, shuffle=True)\n",
+    "    validate_loader = DataLoader(positive_validate_dataset, batch_size=1, shuffle=True)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    # t = 0\n",
+    "    # for positive_train, positive_label in train_loader:\n",
+    "    #     t += 1\n",
+    "    #     # print(positive_train.shape)\n",
+    "    #     # print(positive_label.shape)\n",
+    "    # # print('共有',t,'个训练集')\n",
+    "    \n",
+    "    # n = 0\n",
+    "    # for positive_validate, positive_label in validate_loader:\n",
+    "    #     n += 1\n",
+    "    #     # print(positive_validate.shape)\n",
+    "    #     # print(positive_label.shape)\n",
+    "    # # print('共有',n,'个训练集')\n",
+    "    print('\\n')\n",
+    "    print('开始加载正式数据集...')\n",
+    "    print('***********************************************')\n",
+    "    \n",
+    "    train_dataset = torch.utils.data.ConcatDataset([negative_train_dataset, positive_train_dataset])\n",
+    "    validate_dataset = torch.utils.data.ConcatDataset([negative_validate_dataset, positive_validate_dataset])\n",
+    "    \n",
+    "    # print(len(train_dataset))\n",
+    "    # print(len(validate_dataset))\n",
+    "    # print(list(train_dataset))\n",
+    "    # m = 0\n",
+    "    # for data, label in validate_dataset:\n",
+    "    #     m += 1\n",
+    "    #     # print(data)\n",
+    "    #     print('******************************************************************')\n",
+    "    #     # print(label)\n",
+    "    #     print('一共',m,'个数据')\n",
+    "\n",
+    "    \n",
+    "    traindata_Loader = DataLoader(train_dataset, batch_size = 50, shuffle=True)\n",
+    "    validatedata_Loader = DataLoader(validate_dataset, batch_size = 50, shuffle=True)\n",
+    "    q = 0\n",
+    "    for train, label in traindata_Loader:\n",
+    "        # print(train.shape)\n",
+    "        # print(label.shape)\n",
+    "        q += 1\n",
+    "    print('测试集一共划分为：',q,'个批次')\n",
+    "    p = 0\n",
+    "    for validate, label in validatedata_Loader:\n",
+    "        # print(validate.shape)\n",
+    "        # print(label.shape)\n",
+    "        p += 1\n",
+    "    print('验证集一共划分为：',p,'个批次')\n",
+    "    print('***********************************************')\n",
+    "    print('正式数据集加载完毕！')"
    ]
   }
  ],
