--- a/Generate_dataset/Jupyter_Code/Code/train_04_11.ipynb
+++ b/Generate_dataset/Jupyter_Code/Code/train_04_11.ipynb
@@ -75,34 +75,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "************************读入negative_sample***********************\n",
-      "negative_train_size: 6733\n",
-      "negative_validate_size: 2886\n",
-      "读入数据个数为： 6733\n",
-      "*****************************读入完毕！****************************\n",
-      "\n",
-      "\n",
-      "************************读入positive_sample***********************\n",
-      "positive_train_size: 222\n",
-      "positive_validate_size: 95\n",
-      "读入数据个数为： 222\n",
-      "*****************************读入完毕！****************************\n",
-      "\n",
-      "\n",
-      "*************************开始加载正式数据集*************************\n",
-      "测试集一共划分为： 140 个批次\n",
-      "验证集一共划分为： 60 个批次\n",
-      "*************************正式数据集加载完毕*************************\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import glob\n",
@@ -153,111 +128,61 @@
     "        return len(self.data_path)\n",
     "\n",
     "#测试载入数据程序\n",
-    "if __name__ == '__main__':\n",
+    "# if __name__ == '__main__':\n",
     "\n",
+    "#     #读取并载入negative_dataset\n",
+    "#     print('读入negative_sample...')\n",
+    "#     print('***********************************************')\n",
+    "#     dataset1 = Generate_Dataset1('../Data/dataset(positive_negative)/input/')\n",
+    "#     negative_train_size = int(len(dataset1) * 0.7)\n",
+    "#     print('negative_train_size:', negative_train_size)\n",
+    "#     negative_validate_size = int(len(dataset1) - negative_train_size)\n",
+    "#     print('negative_validate_size:', negative_validate_size)\n",
     "\n",
-    "    #************************************************************************************************\n",
-    "    #读取并载入negative_dataset\n",
-    "    print('************************读入negative_sample***********************')\n",
-    "    dataset1 = Generate_Dataset1('../Data/dataset(positive_negative)/input/')\n",
-    "    negative_train_size = int(len(dataset1) * 0.7)\n",
-    "    print('negative_train_size:', negative_train_size)\n",
-    "    negative_validate_size = int(len(dataset1) - negative_train_size)\n",
-    "    print('negative_validate_size:', negative_validate_size)\n",
+    "#     negative_train_dataset, negative_validate_dataset = torch.utils.data\\\n",
+    "#                 .random_split(dataset1, [negative_train_size, negative_validate_size])\n",
     "\n",
-    "    negative_train_dataset, negative_validate_dataset = torch.utils.data\\\n",
-    "                .random_split(dataset1, [negative_train_size, negative_validate_size])\n",
-    "\n",
-    "    print(\"读入数据个数为：\", len(negative_train_dataset))\n",
-    "    print('*****************************读入完毕！****************************')\n",
-    "    print('\\n')\n",
-    "    train_loader = DataLoader(negative_train_dataset, batch_size=1, shuffle=True)\n",
-    "    validate_loader = DataLoader(negative_validate_dataset, batch_size=1, shuffle=True)\n",
+    "#     print(\"读入数据个数为：\", len(negative_train_dataset))\n",
+    "#     print('***********************************************')\n",
+    "#     print('读入完毕！')\n",
+    "#     print('\\n')\n",
     "    \n",
-    "    # t = 0\n",
-    "    # for negative_train, negative_label in train_loader:\n",
-    "    #     t += 1\n",
-    "    #     print(negative_train.shape)\n",
-    "    #     print(negative_label.shape)\n",
-    "    # print('共有',t,'个训练集')\n",
+    "#     #读取并载入positive_dataset\n",
+    "#     print('读入positive_sample...')\n",
+    "#     print('***********************************************')\n",
+    "#     dataset2 = Generate_Dataset2('../Data/dataset(positive_negative)/input/')\n",
+    "#     positive_train_size = int(len(dataset2) * 0.7) + 1\n",
+    "#     print('positive_train_size:',positive_train_size)\n",
+    "#     positive_validate_size = int(len(dataset2) - positive_train_size)\n",
+    "#     print('positive_validate_size:', positive_validate_size)\n",
+    "#     positive_train_dataset, positive_validate_dataset = torch.utils.data\\\n",
+    "#                 .random_split(dataset2, [positive_train_size, positive_validate_size])\n",
+    "#     print(\"读入数据个数为：\", len(positive_train_dataset))\n",
+    "#     print('***********************************************')\n",
+    "#     print('读入完毕！')\n",
     "    \n",
-    "    # n = 0\n",
-    "    # for negative_validate, negative_label in validate_loader:\n",
-    "    #     n += 1\n",
-    "    #     print(negative_validate.shape)\n",
-    "    #     print(negative_label.shape)\n",
-    "    # print('共有',n,'个训练集')\n",
-    "\n",
-    "\n",
-    "\n",
-    "    # print('******************************分割线******************************')\n",
-    "\n",
-    "\n",
-    "    #************************************************************************************************\n",
-    "    #读取并载入positive_dataset\n",
-    "    print('************************读入positive_sample***********************')\n",
-    "    dataset2 = Generate_Dataset2('../Data/dataset(positive_negative)/input/')\n",
-    "    positive_train_size = int(len(dataset2) * 0.7) + 1\n",
-    "    print('positive_train_size:',positive_train_size)\n",
-    "    positive_validate_size = int(len(dataset2) - positive_train_size)\n",
-    "    print('positive_validate_size:', positive_validate_size)\n",
-    "    positive_train_dataset, positive_validate_dataset = torch.utils.data\\\n",
-    "                .random_split(dataset2, [positive_train_size, positive_validate_size])\n",
-    "\n",
-    "    print(\"读入数据个数为：\", len(positive_train_dataset))\n",
-    "    print('*****************************读入完毕！****************************')\n",
-    "    train_loader = DataLoader(positive_train_dataset, batch_size=1, shuffle=True)\n",
-    "    validate_loader = DataLoader(positive_validate_dataset, batch_size=1, shuffle=True)\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    # t = 0\n",
-    "    # for positive_train, positive_label in train_loader:\n",
-    "    #     t += 1\n",
-    "    #     # print(positive_train.shape)\n",
-    "    #     # print(positive_label.shape)\n",
-    "    # # print('共有',t,'个训练集')\n",
-    "    \n",
-    "    # n = 0\n",
-    "    # for positive_validate, positive_label in validate_loader:\n",
-    "    #     n += 1\n",
-    "    #     # print(positive_validate.shape)\n",
-    "    #     # print(positive_label.shape)\n",
-    "    # # print('共有',n,'个训练集')\n",
-    "    print('\\n')\n",
-    "    print('*************************开始加载正式数据集*************************')\n",
-    "    train_dataset = torch.utils.data.ConcatDataset([negative_train_dataset, positive_train_dataset])\n",
-    "    validate_dataset = torch.utils.data.ConcatDataset([negative_validate_dataset, positive_validate_dataset])\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    # print(len(train_dataset))\n",
-    "    # print(len(validate_dataset))\n",
-    "    # print(list(train_dataset))\n",
-    "    # m = 0\n",
-    "    # for data, label in validate_dataset:\n",
-    "    #     m += 1\n",
-    "    #     # print(data)\n",
-    "    #     print('******************************************************************')\n",
-    "    #     # print(label)\n",
-    "    #     print('一共',m,'个数据')\n",
-    "\n",
-    "    \n",
-    "    traindata_Loader = DataLoader(train_dataset, batch_size = 50, shuffle=True)\n",
-    "    validatedata_Loader = DataLoader(validate_dataset, batch_size = 50, shuffle=True)\n",
-    "    q = 0\n",
-    "    for train, label in traindata_Loader:\n",
-    "        # print(train.shape)\n",
-    "        # print(label.shape)\n",
-    "        q += 1\n",
-    "    print('测试集一共划分为：',q,'个批次')\n",
-    "    p = 0\n",
-    "    for validate, label in validatedata_Loader:\n",
-    "        # print(validate.shape)\n",
-    "        # print(label.shape)\n",
-    "        p += 1\n",
-    "    print('验证集一共划分为：',p,'个批次')\n",
-    "    print('*************************正式数据集加载完毕*************************')"
+    "#     #正式加载数据集\n",
+    "#     print('\\n')\n",
+    "#     print('开始加载正式数据集...')\n",
+    "#     print('***********************************************')\n",
+    "#     train_dataset = torch.utils.data.ConcatDataset([negative_train_dataset, positive_train_dataset])\n",
+    "#     validate_dataset = torch.utils.data.ConcatDataset([negative_validate_dataset, positive_validate_dataset])\n",
+    "#     traindata_Loader = DataLoader(train_dataset, batch_size = 50, shuffle=True)\n",
+    "#     validatedata_Loader = DataLoader(validate_dataset, batch_size = 50, shuffle=True)\n",
+    "#     q = 0\n",
+    "#     for train, label in traindata_Loader:\n",
+    "#         # print(train.shape)\n",
+    "#         # print(label.shape)\n",
+    "#         q += 1\n",
+    "#     print('测试集一共划分为：',q,'个批次')\n",
+    "#     p = 0\n",
+    "#     for validate, label in validatedata_Loader:\n",
+    "#         # print(validate.shape)\n",
+    "#         # print(label.shape)\n",
+    "#         p += 1\n",
+    "#     print('验证集一共划分为：',p,'个批次')\n",
+    "#     print('***********************************************')\n",
+    "#     print('正式数据集加载完毕!')"
    ]
   },
   {
@@ -437,71 +362,87 @@
     "\n",
     "import torch\n",
     "import math\n",
+    "import os\n",
+    "import glob\n",
+    "import numpy as np\n",
     "\n",
     "\n",
-    "# def cb_loss(y_pred, y_true, temp, beta, confusion):\n",
+    "#类平衡损失函数\n",
+    "def cb_loss(y_pred, y_true, temp, beta, confusion):\n",
     "\n",
-    "#     #计算每个类别对应的样本数\n",
-    "#     confusion_ = [torch.sum(temp == i) for i in range(2)]   #统计一张label中每个类别的像素点\n",
+    "    #计算每个类别对应的样本数\n",
+    "    confusion_ = [torch.sum(temp == i) for i in range(2)]   #统计一张label中每个类别的像素点\n",
     "\n",
-    "#     weight = []\n",
-    "#     weight_dice = []\n",
-    "#     for i, n in zip(confusion_, confusion):\n",
-    "#         if i == 0:\n",
-    "#             weight.append(0)\n",
-    "#             weight_dice.append(1)\n",
-    "#         else:\n",
-    "#             weight_dice.append(1)\n",
-    "#             weight.append(((1.0 - beta) / (1.0 - math.pow(beta, n))))\n",
+    "    weight = []\n",
+    "    weight_dice = []\n",
+    "    for i, n in zip(confusion_, confusion):\n",
+    "        if i == 0:\n",
+    "            weight.append(0)\n",
+    "            weight_dice.append(1)\n",
+    "        else:\n",
+    "            weight_dice.append(1)\n",
+    "            weight.append(((1.0 - beta) / (1.0 - math.pow(beta, n))))\n",
     "    \n",
     "    \n",
-    "#     weight = torch.FloatTensor(weight)\n",
-    "#     weight_dice = torch.FloatTensor(weight_dice)\n",
-    "#     weight = weight.to(y_pred.device)\n",
-    "#     weight_dice = weight_dice.to(y_pred.device)\n",
+    "    weight = torch.FloatTensor(weight)\n",
+    "    weight_dice = torch.FloatTensor(weight_dice)\n",
+    "    weight = weight.to(y_pred.device)\n",
+    "    weight_dice = weight_dice.to(y_pred.device)\n",
     "\n",
     "\n",
-    "#     criterion_train = torch.nn.CrossEntropyLoss(weight=weight)\n",
+    "    criterion_train = torch.nn.CrossEntropyLoss(weight=weight)\n",
+    "    loss = criterion_train(y_pred.float(), temp.float())\n",
     "\n",
-    "#     loss = criterion_train(y_pred.float(), temp.float())\n",
-    "\n",
-    "#     return loss\n",
+    "    return loss\n",
     "\n",
     "\n",
     "\n",
     "def train_net(net, device, data_path, epochs=100, batch_size=50, lr=0.001):\n",
-    "    dataset = Generate_Dataset(data_path)\n",
-    "    #划分训练集和验证集\n",
-    "    train_size = int(len(dataset) * 0.9)\n",
-    "    validate_size = int(len(dataset) - train_size)\n",
-    "    train_dataset, validate_dataset = torch.utils.data.random_split(dataset, [train_size, validate_size])\n",
-    "    #加载训练集和验证集\n",
-    "    train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "\n",
+    "    #读取并载入negative_dataset\n",
+    "    dataset1 = Generate_Dataset1(data_path)\n",
+    "    negative_train_size = int(len(dataset1) * 0.7)\n",
+    "    negative_validate_size = int(len(dataset1) - negative_train_size)\n",
+    "    negative_train_dataset, negative_validate_dataset = torch.utils.data\\\n",
+    "                .random_split(dataset1, [negative_train_size, negative_validate_size])\n",
     "    \n",
-    "    validate_loader = DataLoader(validate_dataset, batch_size=batch_size, shuffle=True)\n",
+    "    #读取并载入positive_dataset\n",
+    "    dataset2 = Generate_Dataset2(data_path)\n",
+    "    positive_train_size = int(len(dataset2) * 0.7) + 1\n",
+    "    positive_validate_size = int(len(dataset2) - positive_train_size)\n",
+    "    positive_train_dataset, positive_validate_dataset = torch.utils.data\\\n",
+    "                .random_split(dataset2, [positive_train_size, positive_validate_size])\n",
+    "\n",
+    "    #数据集按:negative:positive=7:3比例进行合并\n",
+    "    train_dataset = torch.utils.data.ConcatDataset([negative_train_dataset, positive_train_dataset])\n",
+    "    validate_dataset = torch.utils.data.ConcatDataset([negative_validate_dataset, positive_validate_dataset])\n",
+    "    traindata_loader = DataLoader(train_dataset, batch_size, shuffle=True)\n",
+    "    validatedata_loader = DataLoader(validate_dataset, batch_size, shuffle=True)\n",
     "    \n",
+    "    \n",
+    "    #设置Adam优化器\n",
     "    optimizer = optim.Adam(net.parameters(), lr=lr)\n",
-    "\n",
-    "    #\n",
     "    \n",
+    "    #设置终止迭代loss阈值\n",
+    "    best_loss = float('np.inf')\n",
     "\n",
+    "    #设置损失函数相关参数\n",
+    "    confusion = [9619, 317]   #number of negative sample:9619/number of positive sample:317\n",
     "\n",
-    "    \n",
-    "    best_loss = float('inf')\n",
-    "\n",
+    "    #开始训练\n",
     "    for epoch in range(epochs):\n",
-    "        print('epoch:',epoch)\n",
+    "        print('第',epoch,'次循环：',epoch)\n",
     "        net.train()\n",
     "        \n",
     "        #训练数据集\n",
-    "        for data, label in train_loader:\n",
+    "        for data, label in traindata_loader:\n",
     "            \n",
     "            optimizer.zero_grad()\n",
     "            data = data.to(device=device, dtype=torch.float32)\n",
     "            label = label.to(device=device, dtype=torch.float32)\n",
     "            pred = net(data)\n",
-    "            temp = torch.argmax(pred, dim=1)\n",
-    "            loss = cb_loss(pred, label, temp, 0.9999, cls)\n",
+    "            temp = torch.argmax(label, dim=1)\n",
+    "            loss = cb_loss(pred, label, temp, 0.99, confusion)\n",
     "           \n",
     "            writer.add_scalar('trainloss',float(loss),epoch)\n",
     "            writer.close()\n",
@@ -513,7 +454,7 @@
     "                best_loss = loss\n",
     "            torch.save(net.state_dict(), 'best_model.pth')\n",
     "        #验证集测试\n",
-    "        for validatedata, validatelabel in validate_loader:\n",
+    "        for validatedata, validatelabel in validatedata_loader:\n",
     "            \n",
     "            validatedata = validatedata.to(device, dtype=torch.float32)\n",
     "            validatelabel = validatelabel.to(device, dtype=torch.float32)\n",
@@ -529,7 +470,7 @@
     "    net = UNet3D(1, 1)\n",
     "    net.to(device=device)\n",
     "\n",
-    "    data_path = \"../../../../Generate_dataset/Matlab_files/dataset/dataset/\"\n",
+    "    data_path = '../Data/dataset(positive_negative)/input/'\n",
     "    train_net(net, device, data_path)\n",
     "\n"
    ]
