工作站“【train】_05_16.ipynb”文件添加到仓库——2023.05.25
Signed-off-by: WZY-Desktop <wzz12135@gmail.com>

--- a/Generate_dataset/Jupyter_Code/Code/Cross_Entropy.ipynb
+++ b/Generate_dataset/Jupyter_Code/Code/Cross_Entropy.ipynb
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
       "***********************************************\n",
       "negative_train_size: 6733\n",
       "negative_validate_size: 2886\n",
-      "读入数据个数为： 6733\n",
+      "读入数据个数为： 9619\n",
       "***********************************************\n",
       "读入完毕！\n",
       "\n",
@@ -284,18 +284,18 @@
       "读入positive_sample...\n",
       "***********************************************\n",
       "positive_train_size: 222\n",
-      "positive_validate_size: 95\n",
-      "读入数据个数为： 222\n",
-      "***********************************************\n",
-      "读入完毕！\n",
-      "\n",
-      "\n",
-      "开始加载正式数据集...\n",
-      "***********************************************\n",
-      "测试集一共划分为： 140 个批次\n",
-      "验证集一共划分为： 60 个批次\n",
-      "***********************************************\n",
-      "正式数据集加载完毕！\n"
+      "positive_validate_size: 95\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "array() takes from 1 to 2 positional arguments but 222 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[18], line 107\u001b[0m\n\u001b[0;32m    101\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mpositive_validate_size:\u001b[39m\u001b[39m'\u001b[39m, positive_validate_size)\n\u001b[0;32m    102\u001b[0m positive_train_dataset, positive_validate_dataset \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mutils\u001b[39m.\u001b[39mdata\\\n\u001b[0;32m    103\u001b[0m             \u001b[39m.\u001b[39mrandom_split(dataset2, [positive_train_size, positive_validate_size], generator \u001b[39m=\u001b[39m generator)\n\u001b[1;32m--> 107\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mpositive_train_dataset:\u001b[39m\u001b[39m'\u001b[39m,np\u001b[39m.\u001b[39;49marray(\u001b[39m*\u001b[39;49mpositive_train_dataset\u001b[39m.\u001b[39;49mindices)\u001b[39m.\u001b[39mshape)\n\u001b[0;32m    112\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m读入数据个数为：\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mlen\u001b[39m(positive_train_dataset)\u001b[39m+\u001b[39m\u001b[39mlen\u001b[39m(positive_validate_dataset))\n\u001b[0;32m    113\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m***********************************************\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: array() takes from 1 to 2 positional arguments but 222 were given"
      ]
     }
    ],
@@ -350,8 +350,8 @@
     "\n",
     "#测试载入数据程序\n",
     "if __name__ == '__main__':\n",
-    "\n",
-    "\n",
+    "    #设置dataloader固定生成器\n",
+    "    generator = torch.Generator().manual_seed(42)\n",
     " \n",
     "    #读取并载入negative_dataset\n",
     "    print('读入negative_sample...')\n",
@@ -363,14 +363,14 @@
     "    print('negative_validate_size:', negative_validate_size)\n",
     "\n",
     "    negative_train_dataset, negative_validate_dataset = torch.utils.data\\\n",
-    "                .random_split(dataset1, [negative_train_size, negative_validate_size])\n",
+    "                .random_split(dataset1, [negative_train_size, negative_validate_size], generator = generator)\n",
     "\n",
-    "    print(\"读入数据个数为：\", len(negative_train_dataset))\n",
+    "    print(\"读入数据个数为：\", len(negative_train_dataset)+len(negative_validate_dataset))\n",
     "    print('***********************************************')\n",
     "    print('读入完毕！')\n",
     "    print('\\n')\n",
-    "    train_loader = DataLoader(negative_train_dataset, batch_size=1, shuffle=True)\n",
-    "    validate_loader = DataLoader(negative_validate_dataset, batch_size=1, shuffle=True)\n",
+    "    # train_loader = DataLoader(negative_train_dataset, batch_size=1, shuffle=True)\n",
+    "    # validate_loader = DataLoader(negative_validate_dataset, batch_size=1, shuffle=True)\n",
     "    \n",
     "    # t = 0\n",
     "    # for negative_train, negative_label in train_loader:\n",
@@ -402,13 +402,20 @@
     "    positive_validate_size = int(len(dataset2) - positive_train_size)\n",
     "    print('positive_validate_size:', positive_validate_size)\n",
     "    positive_train_dataset, positive_validate_dataset = torch.utils.data\\\n",
-    "                .random_split(dataset2, [positive_train_size, positive_validate_size])\n",
+    "                .random_split(dataset2, [positive_train_size, positive_validate_size], generator = generator)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    print('positive_train_dataset:',np.array(*positive_train_dataset.indices).shape)\n",
     "\n",
-    "    print(\"读入数据个数为：\", len(positive_train_dataset))\n",
+    "\n",
+    "\n",
+    "\n",
+    "    print(\"读入数据个数为：\", len(positive_train_dataset)+len(positive_validate_dataset))\n",
     "    print('***********************************************')\n",
     "    print('读入完毕！')\n",
-    "    train_loader = DataLoader(positive_train_dataset, batch_size=1, shuffle=True)\n",
-    "    validate_loader = DataLoader(positive_validate_dataset, batch_size=1, shuffle=True)\n",
+    "    # train_loader = DataLoader(positive_train_dataset, batch_size=1, shuffle=True)\n",
+    "    # validate_loader = DataLoader(positive_validate_dataset, batch_size=1, shuffle=True)\n",
     "    \n",
     "    \n",
     "    \n",
@@ -425,13 +432,15 @@
     "    #     # print(positive_validate.shape)\n",
     "    #     # print(positive_label.shape)\n",
     "    # # print('共有',n,'个训练集')\n",
-    "    print('\\n')\n",
-    "    print('开始加载正式数据集...')\n",
-    "    print('***********************************************')\n",
-    "    \n",
+    "\n",
     "    train_dataset = torch.utils.data.ConcatDataset([negative_train_dataset, positive_train_dataset])\n",
     "    validate_dataset = torch.utils.data.ConcatDataset([negative_validate_dataset, positive_validate_dataset])\n",
-    "    \n",
+    "    print('\\n')\n",
+    "    print('train_dataset/validate_dataset数量统计...')\n",
+    "    print('***********************************************')\n",
+    "    print('Number of train_dataset:',len(train_dataset))\n",
+    "    print('Number of validate_dataset:',len(validate_dataset))\n",
+    "    print('***********************************************')\n",
     "    # print(len(train_dataset))\n",
     "    # print(len(validate_dataset))\n",
     "    # print(list(train_dataset))\n",
@@ -443,7 +452,9 @@
     "    #     # print(label)\n",
     "    #     print('一共',m,'个数据')\n",
     "\n",
-    "    \n",
+    "    print('\\n')\n",
+    "    print('开始加载正式数据集...')\n",
+    "    print('***********************************************')\n",
     "    traindata_Loader = DataLoader(train_dataset, batch_size = 50, shuffle=True)\n",
     "    validatedata_Loader = DataLoader(validate_dataset, batch_size = 50, shuffle=True)\n",
     "    q = 0\n",
