--- a/Generate_dataset/Jupyter_Code/Code/test_v2.ipynb
+++ b/Generate_dataset/Jupyter_Code/Code/test_v2.ipynb
@@ -344,6 +344,56 @@
     "print('weight',weight)\n",
     "print('weight_dice',weight_dice)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 6 1\n",
+      "8 4 5 0 9 3 7\n",
+      "(3,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "generator1 = torch.Generator().manual_seed(42)\n",
+    "\n",
+    "data1 = torch.utils.data.random_split([0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [3, 7], generator=generator1)\n",
+    "\n",
+    "print(*data1[0])\n",
+    "print(*data1[1])\n",
+    "# print(data1[0].dataset)\n",
+    "print(np.array(data1[0].indices).shape)\n",
+    "# print(dir(data1[0]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9 4 8\n",
+      "5 0 1 3 7 6 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "data1 = torch.utils.data.random_split([0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [3, 7])\n",
+    "print(*data1[0])\n",
+    "print(*data1[1])"
+   ]
   }
  ],
  "metadata": {
