更新“train_05_16”,整理ipynb代码
Signed-off-by: WZY-Desktop <wzz12135@gmail.com>

--- a/Generate_dataset/Jupyter_Code/Code/ipynb代码/Cross_Entropy.ipynb
+++ b/Generate_dataset/Jupyter_Code/Code/ipynb代码/Cross_Entropy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -18,41 +18,37 @@
      "output_type": "stream",
      "text": [
       "output:\n",
-      " tensor([[-0.0106, -0.4310, -1.6414,  1.2071,  0.3368],\n",
-      "        [-0.2920,  1.3862, -1.0200, -0.1568, -1.7095],\n",
-      "        [-0.0953,  0.6084, -0.6550,  0.4059,  0.7989],\n",
-      "        [-1.2834,  0.6305,  0.5013,  1.0222, -0.6259],\n",
-      "        [ 2.5351,  1.5265,  0.5361, -1.2505,  1.2854]])\n",
+      " tensor([[-0.5807,  0.3774,  0.6274, -1.1844,  1.1816],\n",
+      "        [-0.3242,  0.9124, -0.4214, -0.3013, -1.3511],\n",
+      "        [-1.2594, -0.4036, -0.3842, -0.5969, -1.3031],\n",
+      "        [ 0.9459,  2.5789, -1.5776,  0.5863, -0.4910]])\n",
       "target:\n",
-      " tensor([0, 2, 1, 3, 4])\n",
+      " tensor([2, 1, 3, 4])\n",
       "one_hot:\n",
-      " tensor([[1., 0., 0., 0., 0.],\n",
-      "        [0., 0., 1., 0., 0.],\n",
+      " tensor([[0., 0., 1., 0., 0.],\n",
       "        [0., 1., 0., 0., 0.],\n",
       "        [0., 0., 0., 1., 0.],\n",
       "        [0., 0., 0., 0., 1.]])\n",
       "softmax:\n",
-      " tensor([[0.1504, 0.0988, 0.0295, 0.5084, 0.2129],\n",
-      "        [0.1216, 0.6511, 0.0587, 0.1392, 0.0295],\n",
-      "        [0.1301, 0.2629, 0.0743, 0.2147, 0.3180],\n",
-      "        [0.0389, 0.2638, 0.2318, 0.3903, 0.0751],\n",
-      "        [0.5526, 0.2016, 0.0749, 0.0125, 0.1584]])\n",
+      " tensor([[0.0750, 0.1956, 0.2512, 0.0410, 0.4371],\n",
+      "        [0.1485, 0.5115, 0.1348, 0.1520, 0.0532],\n",
+      "        [0.1156, 0.2721, 0.2774, 0.2242, 0.1107],\n",
+      "        [0.1402, 0.7175, 0.0112, 0.0978, 0.0333]])\n",
       "logsoftmax:\n",
-      " tensor([[-1.8943, -2.3146, -3.5250, -0.6765, -1.5468],\n",
-      "        [-2.1073, -0.4291, -2.8353, -1.9721, -3.5248],\n",
-      "        [-2.0397, -1.3360, -2.5994, -1.5386, -1.1456],\n",
-      "        [-3.2464, -1.3325, -1.4617, -0.9408, -2.5889],\n",
-      "        [-0.5930, -1.6017, -2.5920, -4.3786, -1.8428]])\n",
+      " tensor([[-2.5897, -1.6316, -1.3816, -3.1935, -0.8275],\n",
+      "        [-1.9069, -0.6704, -2.0042, -1.8840, -2.9338],\n",
+      "        [-2.1575, -1.3017, -1.2823, -1.4950, -2.2012],\n",
+      "        [-1.9650, -0.3320, -4.4885, -2.3246, -3.4019]])\n",
       "one_hot*logsoftmax:\n",
-      " tensor([[-1.8943, -0.0000, -0.0000, -0.0000, -0.0000],\n",
-      "        [-0.0000, -0.0000, -2.8353, -0.0000, -0.0000],\n",
-      "        [-0.0000, -1.3360, -0.0000, -0.0000, -0.0000],\n",
-      "        [-0.0000, -0.0000, -0.0000, -0.9408, -0.0000],\n",
-      "        [-0.0000, -0.0000, -0.0000, -0.0000, -1.8428]])\n",
+      " tensor([[-0.0000, -0.0000, -1.3816, -0.0000, -0.0000],\n",
+      "        [-0.0000, -0.6704, -0.0000, -0.0000, -0.0000],\n",
+      "        [-0.0000, -0.0000, -0.0000, -1.4950, -0.0000],\n",
+      "        [-0.0000, -0.0000, -0.0000, -0.0000, -3.4019]])\n",
+      "a torch.Size([4, 5])\n",
       "nllloss:\n",
-      " tensor(1.7698)\n",
+      " tensor(1.7372)\n",
       "loss:\n",
-      " tensor(1.7698)\n"
+      " tensor(1.7372)\n"
      ]
     }
    ],
@@ -61,11 +57,11 @@
     "import torch.nn.functional as F\n",
     "\n",
     "#生成神经网络output，一行对应一个样本，一列对应该样本属于该列类的预测概率\n",
-    "output = torch.randn(5, 5)\n",
+    "output = torch.randn(4, 5)\n",
     "print('output:\\n',output)\n",
     "\n",
     "#生成5个样本的标签，并转换为One-Hot编码\n",
-    "target = torch.tensor([0, 2, 1, 3, 4])\n",
+    "target = torch.tensor([2, 1, 3, 4])\n",
     "print('target:\\n',target)\n",
     "one_hot = F.one_hot(target).float()\n",
     "print('one_hot:\\n',one_hot)\n",
@@ -81,6 +77,8 @@
     "#按照label标号为1的像素点位置读取logsoftmax，计算损失函数值\n",
     "nllloss = -torch.sum(one_hot*logsoftmax)/target.shape[0]\n",
     "print('one_hot*logsoftmax:\\n',one_hot*logsoftmax)\n",
+    "a = one_hot*logsoftmax\n",
+    "print('a',a.shape)\n",
     "print('nllloss:\\n',nllloss)\n",
     "\n",
     "#直接使用封装好的CrossEntropyLoss计算损失函数值\n",
