--- a/Generate_dataset/Jupyter_Code/Code/ipynb代码/【train】_05_16.ipynb
+++ b/Generate_dataset/Jupyter_Code/Code/ipynb代码/【train】_05_16.ipynb
@@ -438,10 +438,10 @@
     "    validateloss = validateloss / (len(data_loader.dataset) / 50)\n",
     "    writer.add_scalar('validateloss',float(validateloss),epoch)\n",
     "    writer.close()\n",
-    "    print(\"validate_Epoch:{},\\t validate_Loss:{}\".format(epoch, validateloss))\n",
+    "    print(\"-\"*60+\"\\n [validate_Epoch]:{},\\n [validate_Loss]:{}\".format(epoch, validateloss))\n",
     "\n",
     "\n",
-    "def train_net(net, device, data_path, epochs=50, batch_size=10, lr=0.00003):\n",
+    "def train_net(net, device, data_path, epochs=500, batch_size=10, lr=0.000001):\n",
     "\n",
     "    #设置dataloader固定生成器\n",
     "    generator = torch.Generator().manual_seed(42)\n",
@@ -474,7 +474,7 @@
     "    # print('validatedata_loader:',len(validatedata_loader))\n",
     "    #设置Adam优化器\n",
     "    optimizer = optim.Adam(net.parameters(), lr=lr)\n",
-    "    scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=10, gamma=0.000005)\n",
+    "    scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=10, gamma=0.0000002)\n",
     "    #设置损失函数\n",
     "    # crossentropyloss = torch.nn.BCEWithLogitsLoss()\n",
     "    #设置终止迭代loss阈值\n",
@@ -525,7 +525,8 @@
     "            writer.add_scalar('f1_score',float(sklearn_f1),epoch)\n",
     "            writer.close()\n",
     "            \n",
-    "            print(\"[sklearn_metrics] Epoch:{} Train_loss:{} accuracy:{:.4f} precision:{:4f} recall:{:4f} f1:{:4f}\".format\\\n",
+    "            print(\"[sklearn_metrics]  Epoch:{} \\\n",
+    "                  \\n [Train_loss]:{} \\n [accuracy]:{:.4f} \\n [precision]:{:4f} \\n [recall]:{:4f} \\n [f1]:{:4f}\".format\\\n",
     "                  (epoch, loss, sklearn_accuracy, sklearn_precision, sklearn_recall, sklearn_f1))\n",
     "            \n",
     "            if loss < best_loss:\n",
