--- a/Generate_dataset/Jupyter_Code/Code/ipynb代码/test_v2.ipynb
+++ b/Generate_dataset/Jupyter_Code/Code/ipynb代码/test_v2.ipynb
@@ -394,6 +394,40 @@
     "print(*data1[0])\n",
     "print(*data1[1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input:\n",
+      " tensor([[[-0.4885, -1.2888],\n",
+      "         [-0.5385, -0.5610]],\n",
+      "\n",
+      "        [[-0.9721, -0.9088],\n",
+      "         [ 0.1046, -0.0925]]])\n",
+      "output:\n",
+      " tensor([[[0.6186, 0.4061],\n",
+      "         [0.3446, 0.3850]],\n",
+      "\n",
+      "        [[0.3814, 0.5939],\n",
+      "         [0.6554, 0.6150]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch.nn as nn\n",
+    "import torch\n",
+    "m = nn.Softmax(dim=0)\n",
+    "input = torch.randn(2, 2, 2)\n",
+    "print('input:\\n',input)\n",
+    "output = m(input)\n",
+    "print('output:\\n',output)\n"
+   ]
   }
  ],
  "metadata": {
