--- a/Generate_dataset/Jupyter_Code/Code/ipynb代码/tets111.ipynb
+++ b/Generate_dataset/Jupyter_Code/Code/ipynb代码/tets111.ipynb
@@ -20445,7 +20445,6 @@
     "\n",
     "    print('读取第',t,'个数据')\n",
     "\n",
-    "\n",
     "    #输入数据集生成\n",
     "    os.makedirs(os.path.join(folder_address,str(t)))\n",
     "    inputpath = os.path.join(mat_address,str(t)+'.mat')      #按顺序读取输入数据\n",
@@ -20913,6 +20912,49 @@
     "    zeros_array = np.array(zeros_array)\n",
     "    nozeros_array = array - zeros_array\n",
     "    np.save(os.path.join(data_index, 'detectmatrix.npy'), nozeros_array)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__训练集0/1数据统计__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36347\n",
+      "2499653\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import glob\n",
+    "dataindex = glob.glob('../../Code/dataset_mini_batch/input/positive_input/*.npy')\n",
+    "num_1 = 0\n",
+    "num_0 = 0\n",
+    "for t in range(len(dataindex)):\n",
+    "    data = np.load(dataindex[t])\n",
+    "    data = np.squeeze(data)\n",
+    "    for i in range(data.shape[0]):\n",
+    "        for j in range(data.shape[1]):\n",
+    "            for k in range(data.shape[2]):\n",
+    "                if data[i][j][k] == 1:\n",
+    "                    num_1 += 1\n",
+    "                else:\n",
+    "                    num_0 += 1\n",
+    "                \n",
+    "print(num_1)\n",
+    "print(num_0)"
    ]
   }
  ],
