--- a/Generate_dataset/Jupyter_Code/Code/ipynb代码/【train】_05_16.ipynb
+++ b/Generate_dataset/Jupyter_Code/Code/ipynb代码/【train】_05_16.ipynb
@@ -128,61 +128,61 @@
     "        return len(self.data_path)\n",
     "\n",
     "# #测试载入数据程序\n",
-    "# if __name__ == '__main__':\n",
+    "if __name__ == '__main__':\n",
     "\n",
-    "#     #读取并载入negative_dataset\n",
-    "#     print('读入negative_sample...')\n",
-    "#     print('***********************************************')\n",
-    "#     dataset1 = Generate_Dataset1('./dataset_mini_batch/input/')\n",
-    "#     negative_train_size = int(len(dataset1) * 0.7)\n",
-    "#     print('negative_train_size:', negative_train_size)\n",
-    "#     negative_validate_size = int(len(dataset1) - negative_train_size)\n",
-    "#     print('negative_validate_size:', negative_validate_size)\n",
+    "    #读取并载入negative_dataset\n",
+    "    print('读入negative_sample...')\n",
+    "    print('***********************************************')\n",
+    "    dataset1 = Generate_Dataset1('../dataset_mini_batch/input/')\n",
+    "    negative_train_size = int(len(dataset1) * 0.7)\n",
+    "    print('negative_train_size:', negative_train_size)\n",
+    "    negative_validate_size = int(len(dataset1) - negative_train_size)\n",
+    "    print('negative_validate_size:', negative_validate_size)\n",
     "\n",
-    "#     negative_train_dataset, negative_validate_dataset = torch.utils.data\\\n",
-    "#                 .random_split(dataset1, [negative_train_size, negative_validate_size])\n",
+    "    negative_train_dataset, negative_validate_dataset = torch.utils.data\\\n",
+    "                .random_split(dataset1, [negative_train_size, negative_validate_size])\n",
     "\n",
-    "#     print(\"读入数据个数为：\", (len(negative_train_dataset) + len(negative_validate_dataset)))\n",
-    "#     print('***********************************************')\n",
-    "#     print('读入完毕！')\n",
-    "#     print('\\n')\n",
+    "    print(\"读入数据个数为：\", (len(negative_train_dataset) + len(negative_validate_dataset)))\n",
+    "    print('***********************************************')\n",
+    "    print('读入完毕！')\n",
+    "    print('\\n')\n",
     "    \n",
-    "#     #读取并载入positive_dataset\n",
-    "#     print('读入positive_sample...')\n",
-    "#     print('***********************************************')\n",
-    "#     dataset2 = Generate_Dataset2('./dataset_mini_batch/input/')\n",
-    "#     positive_train_size = int(len(dataset2) * 0.7)\n",
-    "#     print('positive_train_size:',positive_train_size)\n",
-    "#     positive_validate_size = int(len(dataset2) - positive_train_size)\n",
-    "#     print('positive_validate_size:', positive_validate_size)\n",
-    "#     positive_train_dataset, positive_validate_dataset = torch.utils.data\\\n",
-    "#                 .random_split(dataset2, [positive_train_size, positive_validate_size])\n",
-    "#     print(\"读入数据个数为：\", (len(positive_train_dataset) + len(positive_validate_dataset)))\n",
-    "#     print('***********************************************')\n",
-    "#     print('读入完毕！')\n",
+    "    #读取并载入positive_dataset\n",
+    "    print('读入positive_sample...')\n",
+    "    print('***********************************************')\n",
+    "    dataset2 = Generate_Dataset2('../dataset_mini_batch/input/')\n",
+    "    positive_train_size = int(len(dataset2) * 0.7)\n",
+    "    print('positive_train_size:',positive_train_size)\n",
+    "    positive_validate_size = int(len(dataset2) - positive_train_size)\n",
+    "    print('positive_validate_size:', positive_validate_size)\n",
+    "    positive_train_dataset, positive_validate_dataset = torch.utils.data\\\n",
+    "                .random_split(dataset2, [positive_train_size, positive_validate_size])\n",
+    "    print(\"读入数据个数为：\", (len(positive_train_dataset) + len(positive_validate_dataset)))\n",
+    "    print('***********************************************')\n",
+    "    print('读入完毕！')\n",
     "    \n",
-    "#     #正式加载数据集\n",
-    "#     print('\\n')\n",
-    "#     print('开始加载正式数据集...')\n",
-    "#     print('***********************************************')\n",
-    "#     train_dataset = torch.utils.data.ConcatDataset([negative_train_dataset, positive_train_dataset])\n",
-    "#     validate_dataset = torch.utils.data.ConcatDataset([negative_validate_dataset, positive_validate_dataset])\n",
-    "#     traindata_Loader = DataLoader(train_dataset, batch_size = 10, shuffle=True)\n",
-    "#     validatedata_Loader = DataLoader(validate_dataset, batch_size = 10, shuffle=True)\n",
-    "#     q = 0\n",
-    "#     for train, label in traindata_Loader:\n",
-    "#         print('train_shape:',train.shape)\n",
-    "#         print('label_shape:',label.shape)\n",
-    "#         q += 1\n",
-    "#     print('测试集一共划分为：',q,'个批次')\n",
-    "#     p = 0\n",
-    "#     for validate, label in validatedata_Loader:\n",
-    "#         print('v:',validate.shape)\n",
-    "#         print('l:',label.shape)\n",
-    "#         p += 1\n",
-    "#     print('验证集一共划分为：',p,'个批次')\n",
-    "#     print('***********************************************')\n",
-    "#     print('正式数据集加载完毕!')"
+    "    #正式加载数据集\n",
+    "    print('\\n')\n",
+    "    print('开始加载正式数据集...')\n",
+    "    print('***********************************************')\n",
+    "    train_dataset = torch.utils.data.ConcatDataset([negative_train_dataset, positive_train_dataset])\n",
+    "    validate_dataset = torch.utils.data.ConcatDataset([negative_validate_dataset, positive_validate_dataset])\n",
+    "    traindata_Loader = DataLoader(train_dataset, batch_size = 10, shuffle=True)\n",
+    "    validatedata_Loader = DataLoader(validate_dataset, batch_size = 10, shuffle=True)\n",
+    "    q = 0\n",
+    "    for train, label in traindata_Loader:\n",
+    "        print('train_shape:',train.shape)\n",
+    "        print('label_shape:',label.shape)\n",
+    "        q += 1\n",
+    "    print('测试集一共划分为：',q,'个批次')\n",
+    "    p = 0\n",
+    "    for validate, label in validatedata_Loader:\n",
+    "        print('v:',validate.shape)\n",
+    "        print('l:',label.shape)\n",
+    "        p += 1\n",
+    "    print('验证集一共划分为：',p,'个批次')\n",
+    "    print('***********************************************')\n",
+    "    print('正式数据集加载完毕!')"
    ]
   },
   {
@@ -493,8 +493,8 @@
     "       \n",
     "        for train_data, train_label in (traindata_loader):\n",
     "        \n",
-    "            train_data = train_data.to(device=device, dtype=torch.float32)\n",
-    "            train_label = train_label.to(device=device, dtype=torch.float32)\n",
+    "            train_data = train_data.to(device=device, dtype=torch.float32, requires_grad = True)\n",
+    "            train_label = train_label.to(device=device, dtype=torch.float32, requires = True)\n",
     "            \n",
     "            pred = net(train_data)\n",
     "            temp = train_label.squeeze(1).to(device)\n",
@@ -524,7 +524,7 @@
     "            sklearn_f1 = f1_score(train_true, train_pred)\n",
     "            writer.add_scalar('f1_score',float(sklearn_f1),epoch)\n",
     "            writer.close()\n",
-    "            \n",
+    "            97\n",
     "            print(\"[sklearn_metrics]  Epoch:{} \\\n",
     "                  \\n [Train_loss]:{} \\n [accuracy]:{:.4f} \\n [precision]:{:4f} \\n [recall]:{:4f} \\n [f1]:{:4f}\".format\\\n",
     "                  (epoch, loss, sklearn_accuracy, sklearn_precision, sklearn_recall, sklearn_f1))\n",
@@ -617,9 +617,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "topopt",
+   "display_name": "pytorch_cpu",
    "language": "python",
-   "name": "topopt"
+   "name": "pytorch_cpu"
   },
   "language_info": {
    "codemirror_mode": {
@@ -631,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.8.16"
   },
   "orig_nbformat": 4
  },
