--- a/Generate_dataset/Jupyter_Code/Code/ipynb代码/体素模型结构随机断开代码.ipynb
+++ b/Generate_dataset/Jupyter_Code/Code/ipynb代码/体素模型结构随机断开代码.ipynb
@@ -147,28 +147,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import scipy.io as io\n",
-    "import matplotlib.pyplot as plt\n",
-    "def generate_input(data_new):\n",
-    "    #随机断开模型结构\n",
-    "    extract_data = 0\n",
-    "    i = 0\n",
-    "    while extract_data ==0:\n",
-    "        index = np.random.randint(0, 100, size=(3, ))\n",
-    "        extract_data = data_new[index[0]][index[1]][index[2]]\n",
-    "        i +=1\n",
-    "    print('进行了',i,'次搜索')\n",
-    "    print(extract_data)\n",
-    "    i, j ,k = index[0], index[1], index[2]\n",
-    "    print('i, j, k:',i,j,k)\n",
-    "    for m in range(i-3,i+4):\n",
-    "        for n in range(j-3, j+4):\n",
-    "            for t in range(k-3, k+4):\n",
-    "                data_new[m][n][t] = 0\n",
+    "# import numpy as np\n",
+    "# import scipy.io as io\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# def generate_input(data_new):\n",
+    "#     #随机断开模型结构\n",
+    "#     extract_data = 0\n",
+    "#     i = 0\n",
+    "#     while extract_data ==0:\n",
+    "#         index = np.random.randint(0, 100, size=(3, ))\n",
+    "#         extract_data = data_new[index[0]][index[1]][index[2]]\n",
+    "#         i +=1\n",
+    "#     print('进行了',i,'次搜索')\n",
+    "#     print(extract_data)\n",
+    "#     i, j ,k = index[0], index[1], index[2]\n",
+    "#     print('i, j, k:',i,j,k)\n",
+    "#     for m in range(i-3,i+4):\n",
+    "#         for n in range(j-3, j+4):\n",
+    "#             for t in range(k-3, k+4):\n",
+    "#                 data_new[m][n][t] = 0\n",
     "\n",
-    "    input_data = data_new\n",
-    "    return input_data"
+    "#     input_data = data_new\n",
+    "#     return input_data"
    ]
   },
   {
@@ -289,41 +289,6 @@
     "    ax.set_ylim(0, 150)\n",
     "    ax.set_zlim(75, -75)\n",
     "    ax.voxels(labeldata, facecolors=colorsvalues,edgecolors = 'k', shade = False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "data = np.load('../../Matlab_files/dataset/Dataset/input/0.npy')\n",
-    "print(data.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "inputdata = np.load('../Data/dataset（切割数据集-整体汇总编号）/input/4621.npy')\n",
-    "print(np.all(inputdata==0))\n",
-    "labeldata = np.load('../Data/dataset（切割数据集-整体汇总编号）/label/4631.npy')\n",
-    "print(np.all(labeldata==0))"
    ]
   }
  ],
